# itmoscript

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  Exception.hpp  LangException.hpp  cli.cpp  cli.hpp  interpreter.cpp  interpreter.h  interpreter.hpp  utils.cpp  utils.hpp
lib/ast/: AST.cpp  AST.hpp  AstVisitor.hpp  CMakeLists.txt  Node.cpp  Node.hpp  Visitor.hpp
lib/evaluation/: CMakeLists.txt  CallFrame.hpp  Environment.cpp  Environment.hpp  Evaluator.cpp  Evaluator.hpp  FunctionObject.hpp  OperatorRegistry.cpp  OperatorRegistry.hpp  TypeConversionSystem.cpp  TypeConversionSystem.hpp  TypeSystem.cpp  TypeSystem.hpp  Value.cpp  Value.hpp
lib/evaluation/exceptions/: ControlFlowError.hpp  DuplicateParameterError.hpp  ImmutableAssignmentError.hpp  IndexOperandTypeError.hpp  IndexOutOfRangeError.hpp  IndexTypeError.hpp  NameError.hpp  NegativeIndexError.hpp  OperatorTypeError.hpp  ParametersCountError.hpp  RuntimeError.hpp  SequenceMultiplicationError.hpp  StandardFunctionNoCallError.hpp  StandardOverrideError.hpp  UncallableObjectCallError.hpp  UndefinedNameError.hpp  UnexpectedReturnError.hpp  UnsupportedTypeError.hpp  ZeroDivisionError.hpp
lib/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  SyntaxError.hpp  Token.hpp
lib/objects/: CMakeLists.txt  Function.hpp  List.cpp  List.hpp  Value.cpp  Value.hpp
lib/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  ParsingError.hpp
lib/repl/: CMakeLists.txt  REPL.cpp  REPL.hpp
lib/stdlib/: CMakeLists.txt  StdLib.cpp  StdLib.hpp  files.cpp  files.hpp  lists.cpp  lists.hpp  numbers.cpp  numbers.hpp  strings.cpp  strings.hpp  sys.cpp  sys.hpp
lib/stdlib/exceptions/: ArgumentTypeError.hpp  DuplicateNameError.hpp  EmptyListPopError.hpp  FileAccessError.hpp  InvalidArgumentError.hpp  (+2 more)
tests/: CMakeLists.txt  function_test.cpp  illegal_ops_test.cpp  loop_and_branch_test.cpp  types_test.cpp  utils_test.cpp
tests/evaluation/: evaluation_test.hpp  infix_expressions_test.cpp  literals_test.cpp  prefix_expressions_test.cpp  string_operators_test.cpp  type_system_test.cpp
tests/evaluation_units/: assignment_test.cpp  branch_test.cpp  evaluation_units_test.hpp  functions_test.cpp  infix_expressions_test.cpp  literals_test.cpp  loop_test.cpp  naming_test.cpp  prefix_expressions_test.cpp  scope_test.cpp  sequences_test.cpp  string_operators_test.cpp  type_system_test.cpp
tests/language/: branch_test.cpp  function_test.cpp  illegal_ops_test.cpp  language_test.hpp  loop_test.cpp  types_test.cpp
tests/lexer/: lexer_test.cpp  lexer_test.hpp  literals_test.cpp  numbers_parsing_test.cpp  syntax_errors_test.cpp
tests/objects/: list_test.cpp
tests/parser/: basic_expressions_test.cpp  branch_test.cpp  expressions_test.cpp  functions_test.cpp  literals_test.cpp  loop_test.cpp  parser_test.hpp  prefix_and_infix_ops_test.cpp  statements_test.cpp
tests/stdlib/: lists_test.cpp  numbers_test.cpp  stdlib_test.hpp  strings_test.cpp
(+10 files in other folders)
